--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -5,7 +5,7 @@
     }
   ,
   "ConnectionStrings":{
-    "DefaultConnection":"Data Source=.;Initial Catalog=Dbc;User ID=sa;Password=ecs789"
+    "DefaultConnection":"Data Source=localhost\\SQLEXPRESS;Initial Catalog=Dbc;User ID=sa;Password=ecs789"
   },
   "Logging": {
     "LogLevel": {
